<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/miCoachesAttendance"
        android:icon="@drawable/ic_coach"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/coachesAttendance"/>
    <item
        android:id="@+id/miAthletesAttendance"
        android:icon="@drawable/ic_athlete"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/athletesAttendance"/>
    <item
        android:id="@+id/miSendSms"
        android:icon="@drawable/ic_message"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/sms_label"/>
    <item
        android:id="@+id/miSendEmail"
        android:icon="@drawable/ic_email_msg"
        android:orderInCategory="100"
        android:showAsAction="always"
        android:title="@string/email_label"/>

</menu>