<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="15dp"
    android:layout_marginTop="10dp"
    android:paddingTop="15dp" >

    <ImageView
        android:id="@+id/ivCoachProfilePic"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_user_photos_u" />

    <TextView
        android:id="@+id/tvCoachName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivCoachProfilePic"
        android:layout_toRightOf="@id/ivCoachProfilePic"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="Coach Name"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llCoachAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvCoachName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvCoachName"
        android:layout_marginBottom="10dp"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="5dp" >

        <TextView
            android:id="@+id/tvCoachRegistered"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:visibility="gone"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/registered_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvCoachAttended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/attended_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCoachAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/absent_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/tvCoachCancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/cancel_label"
            android:visibility="gone"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvCoachNCNS"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="10dp"
            android:layout_weight="1"
            android:padding="2dp"
            android:text="@string/no_cancel_no_show_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray"
            android:textStyle="bold" />
    </LinearLayout>

</RelativeLayout>