<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent" 
    android:paddingRight="10dp"
    android:paddingBottom="10dp">

    <TextView
        android:id="@+id/tvSMS"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentRight="true"
        android:layout_alignParentTop="true"
        android:paddingTop="10dp"
        android:paddingBottom="10dp"
        android:paddingLeft="10dp"
        android:paddingRight="20dp"
        android:text="@string/sms_label"
        android:textColor="@android:color/darker_gray"/>

    <TextView
        android:id="@+id/tvEmail"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentTop="true"
        android:layout_toLeftOf="@+id/tvSMS"
        android:padding="10dp"
        android:text="@string/email_label"
        android:textColor="@android:color/darker_gray"/>

    <EditText
        android:id="@+id/etMassMessage"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvEmail"
        android:layout_margin="10dp"
        android:ems="10"
        android:gravity="top"
        android:inputType="textMultiLine"
        android:maxLines="5"
        android:scrollbars="vertical" >

        <requestFocus />
    </EditText>

    <!-- android:minHeight="70dp" -->
    <!-- android:background="#00000000" -->

    <Button
        android:id="@+id/btnMassMessageDone"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/etMassMessage"
        android:layout_centerHorizontal="true"
        android:layout_margin="20dp"
        android:text="@string/mass_message_cancel_button" />

</RelativeLayout>