<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_marginBottom="7dp"
    android:layout_marginTop="7dp"
    android:background="@drawable/selector_participant_background">

    <ImageView
        android:id="@+id/ivAthleteProfilePic"
        android:layout_width="65dp"
        android:layout_height="65dp"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:scaleType="fitXY"
        android:src="@drawable/ic_user_photos_u" />

    <TextView
        android:id="@+id/tvAthleteName"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/ivAthleteProfilePic"
        android:layout_toRightOf="@id/ivAthleteProfilePic"
        android:paddingLeft="5dp"
        android:paddingRight="5dp"
        android:paddingTop="5dp"
        android:text="Athlete Name"
        android:textStyle="bold" />

    <LinearLayout
        android:id="@+id/llAthleteAttendance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignLeft="@+id/tvAthleteName"
        android:layout_alignParentRight="true"
        android:layout_below="@+id/tvAthleteName"
        android:orientation="horizontal"
        android:paddingLeft="5dp"
        android:paddingRight="0dp" >

        <TextView
            android:id="@+id/tvAthleteAttended"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/attended_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvAthleteCancelled"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/cancel_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />

        <TextView
            android:id="@+id/tvAthleteAbsent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:paddingBottom="10dp"
            android:paddingTop="5dp"
            android:text="@string/absent_label"
            android:textAppearance="?android:attr/textAppearanceSmall"
            android:textColor="@android:color/darker_gray" />
    </LinearLayout>

</RelativeLayout>